Fri Nov 19 00:59:31 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_gsub): internal buffer should not be listed by
	  ObjectSpace.each_object().  [ruby-dev:24919]

Thu Nov 18 23:42:36 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/depend: Never regenerate lib/ripper/core.rb
	  automatically. [ruby-dev:24911]

Thu Nov 18 20:47:24 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.[ch] (rb_w32_isatty): new function to replace MSVCRT's
	  isatty because it never sets errno.

Thu Nov 18 17:05:01 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_rest_arg): store rest args into invisible local variabe
	  in order to get rid of SEGV at ZSUPER.  [ruby-dev:24913]

Thu Nov 18 15:39:52 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_f_getenv): prohibit for $SAFE=4. [ruby-dev:24908]

Thu Nov 18 14:58:42 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/readline.c: check $SAFE.

	* test/readline/test_readline.rb: added tests for readline.

Thu Nov 18 00:21:15 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (proc_getpgrp): prohibit for $SAFE=2.
	  [ruby-dev:24899]

	* process.c (get_pid): ditto.  [ruby-dev:24904]

	* process.c (get_ppid): ditto.

	* array.c (rb_ary_delete): defer rb_ary_modify() until actual
	  modification.  [ruby-dev:24901]

Thu Nov 18 10:10:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c, rubyio.h (rb_io_modenum_flags): exported.

	* ext/stringio/stringio.c (strio_initialize): allow Fixnum as mode as
	  well as IO.new does.  [ruby-dev:24896]

Wed Nov 17 23:47:30 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/test_settracefunc.rb: added.  [ruby-dev:24884]

Wed Nov 17 18:59:16 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* process.c (proc_getrlimit, proc_setrlimit): add rb_secure(2) to
	  methods of Process.{getrlimit,setrlimit}

Wed Nov 17 13:56:57 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
