@@ -1,3 +1,8 @@
+Fri Nov 19 10:32:36 2004  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* ext/readline/readline.c (readline_s_set_completion_append_character):
+	  accept nil.  [ruby-core:03765]
+
 Fri Nov 19 00:59:31 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* string.c (str_gsub): internal buffer should not be listed by
